--- a/CS466/HW3/CSCI466HW3.tex
+++ b/CS466/HW3/CSCI466HW3.tex
@@ -14,6 +14,49 @@ The difference between routing and forwarding is that routing is finding an opti
 
 \section{Describe how packet loss can occur and be eliminated at:}
 \subsection{Router input ports?}
+It is possible for packet loss to happen at router in ports when multiple ports are using the same out port (head of line blocking).
+\\ \\
+Ways to avoid head of line blocking:
+\begin{enumerate}
+  \item Use a switch with multiple packet queues (high priority/low priority) 
+  \item Increasing buffer size 
+\end{enumerate}
+
+\subsection{Router output ports?}
+Router output ports have loss when an excessive queues have  
+accumulated, although this can't be avoided, it can be minimized. We can drop a few packets here and there before the buffer reaches capacity, which in the grand scheme of things, is much better than having a mass dropping of packets.
 
 
+\section{Consider a datagram network using 32-bit host addresses.}
+\subsection{Translate  the  above  forwarding  rules  into  a  forwarding  table  that  uses  longest  pre x  matchingto  forward  packets  to  the  correct  interface.   Your  table  should  list  pre x  match  and  forwarding interface} 
+
+\begin{table}[h]
+\centering
+\caption{Forwarding Table}
+\label{my-label}
+\begin{tabular}{ll}
+destination addr & interface port \\
+224.0.0.0/10     & 0              \\
+224.64.0.0/16    & 1              \\
+224.0.0.0/8      & 2              \\
+225.0.0.0/9      & 2              \\
+0.0.0.0/0        & 3             
+\end{tabular}
+\end{table}
+
+\subsection{Describe how the forwarding table determines the outgoing link interface for datagrams addressed to (three different addresses):}
+\begin{enumerate}
+  \item 200.145.81.85\\
+  		It must use interface 3 because it does not match with any other addresses first bits. It doesnt match with the beginning 10 bits of 224.0.0.0 nor the 16 bits of 224.64.0.0, 8 bits of 224.0,0,0, or the 225 address
+  		
+  		
+  \item 255.64.195.60\\
+		It must use interface 2 because it matches the 9 bits of the 245.0.0.0 address.  
+  
+  \item 255.128.17.119\\
+  		It must use interface 2 because it matches the 8 bits of the 244.0.0.0 address.
+\end{enumerate}
+
+\section{}
+\subsection{How a hierarchical organization of the Internet allows it to scale to millions of users?}
 \end{document}
