--- a/CS432/HW6/CSCI432HW6.tex
+++ b/CS432/HW6/CSCI432HW6.tex
@@ -10,11 +10,11 @@
 \section{Free 5 Points}
 Thanks for the free 5 points
 \section{Choose the problem in M-2 that you did the worst on and re-do the problem.}
-Prove that the Levenshtein Distance satisifies the identity of indiscernibles (that $E(x,y) = 0$ iff $x=y$)\\
+Prove that the Levenshtein Distance satisifies the identity of indiscernibles (that $E(x,y) = 0$ iff ($x=y$)\\
 \\
 \section{What is the loop invariant of the sweepline algorithm.}
 
-
+What is the loop invatiant of the sweepline algorithm?
 The loop invariant, L, for the sweepline algorithm is that all line segments to the left of the sweepline have already been computed and do not intersect, and all line segments to the right of the sweepline needs to still be computed.\\
 If a loop invariant is true it must hold for the following conditions:
 \begin{enumerate}
@@ -30,6 +30,7 @@ L $\wedge$ X $\Rightarrow$ L. After we breakout of the loop we have our postcond
 
 \section{Concurrency is not Parallelism}
 \subsection{In your own words, define concurrency}
+Concurreny is the set of independent instructions being executed. Essentially, concurrency is how the problem is expressed.
 \subsection{In your own words, define parallelism}
-
+Parallelism is the simultaneous execution of a set of instructions. Essentially, parallelism is all the instances of the procedure being used to deal with a problem.
 \end{document}
